--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "solution",
   "version": "1.0.0",
-  "description": "",
+  "description": "your project description",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon app.js",
+    "dev": "nodemon server.js",
     "tw:build": "tailwindcss build ./public/css/tailwind.css -o ./public/css/main.css"
   },
   "author": "",
