--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "npm install && npm run tw:build",
     "tw:build": "tailwindcss build ./public/css/tailwind.css -o ./public/css/main.css"
   },
   "author": "",
